Fix tips section dark mode

--- a/web/about.scss
+++ b/web/about.scss
@@ -70,6 +70,11 @@ aside#tips {
         margin: 16pt 30vw;
         flex-direction: row;
     }
+
+    @media only screen and (prefers-color-scheme: dark) {
+        border-color: $dark2;
+        background-color: $dark1;
+    }
 }
 
 section#federation {
